styles.css
body {
    margin: 0px;
    padding: 0px;
    user-select: none;
}

ul {
    list-style-type: none;
}

#main {
    font-family: Arial, sans-serif;
    font-size: 16px;
    color: #000000;
    background-color: #444444;
}

#main {
    position: absolute;
    width: 100%;
    height: 100%;
}

/* Image library styles */

#libraryContainer {
    position: absolute;
    width: 60%;
    height: 100%;
    border-right: 2px solid #111111;
    box-sizing: border-box;
    overflow-y: clip;
}

#libraryEntryListContainer{
    width: 100%;
    height: calc(100% - 64px);
    overflow-y: scroll;
    scrollbar-width: thin;
    scrollbar-color: #222222 #333333;
}

.libraryBar {
    width: 100%;
    height: 32px;
    background-color: #222222;
}

#libraryEntryList {
    display: flex;
    flex-wrap: wrap;
    flex-basis: auto;
    overflow-y: auto;
    padding: 0px;
    margin: 8px 8px 0px 8px;
}

.entry {
    margin: 0px 8px 8px 0px;
    border-radius: 4px;
    box-sizing: border-box;
}

.entry:hover .entryThumbnailContainer {
    background-color: #555555;
}

.entryThumbnailContainer {
    display: flex;
    width: 124px;
    height: 124px;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    background-color: #222222;
    contain: content;
    padding: 4px;
    box-sizing: border-box;
}

.entryThumbnail {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    pointer-events: none
}

.entryPropertiesContainer {
    padding: 4px;
    max-width: 116px; /* 124px container width - 2x4px padding */
}

.entryName {
    color: white;
    font-size: 12px;
    font-weight: bold;
    margin: 0px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    line-height: 1;
    max-height: 24px; /* Limiting to 2 lines */
    -webkit-line-clamp: 2; /* Specify the number of lines */
    line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: break-spaces;
}

.selectedEntry .entryThumbnailContainer {
    background-color: #3a3a3a;
    border: 4px solid #43b0f1;
    padding: 0px;
}

.selectedEntry:hover .entryThumbnailContainer {
    background-color: #555555;
}

/* Image display styles */

#displayContainer {
    position: absolute;
    left: 60%;
    width: 40%;
    height: 100%;
    box-sizing: border-box;
}

#imageDisplayContainer {
    position: relative;
    width: 100%;
    height: 70%;
    box-sizing: border-box;
    border-bottom: 2px solid #111111;
    padding: 8px;
}

#imageDisplay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: calc(100% - 16px);
    max-height: calc(100% - 16px);
    object-fit: contain;
}

/* Image metadata styles */

#metaDisplayContainer {
    width: 100%;
    overflow-x: clip;
}

#nameDisplayBar {
    width: 100%;
    height: fit-content;
    background-color: #222222;
    padding: 8px;
    overflow-x: clip;
}

#nameDisplayContainer {
    display: inline;
    align-items: center;
    overflow-x: clip;
}

#nameDisplay {
    color: white;
    font-size: 24px;
    padding: 0px 12px 0px 4px;
    margin: 0px;
    background: none;
    border: none;
    field-sizing: content;
    min-width: 20px;
    max-width: calc(100% - 32px);
}

#propertiesContainer {
    margin: 0px;
}

#tagPanel {
    width: calc(100% - 16px);
    height: calc(100% - 16px);
    padding: 8px;
    display: none;
}

#tagPanelTitleBar h3 {
    color: #dddddd;
    margin: 0px;
}

#tagList{ 
    margin: 0px;
    padding: 8px 0px 0px 0px;
    display: flex;
}

.tag {
    background-color: #666666;
    opacity: 75%;
    color: #bbbbbb;
    margin: 0px 8px 8px 0px;
    padding: 4px 6px;
    border-radius: 4px;
    width: fit-content;
    height: fit-content;
    font-size: 16px;
}

.tag:hover {
    background-color: #999999;
    color: white;
    cursor: pointer;
}

#tagInput {
    border: 0px;
    field-sizing: content;
}

#tagInput::placeholder {
    color: #bbbbbb;
}

